@@ -1,7 +1,5 @@
 language: python
 python:
-  - "3.2"
-  - "3.3"
   - "3.4"
   - "3.5"
   - "3.5-dev" # 3.5 development branch
@@ -9,9 +7,9 @@ python:
   - "3.6-dev" # 3.6 development branch
   - "3.7-dev" # 3.7 development branch
   - "nightly"
-  - "pypy3"
+
 # command to install dependencies
 install:
   - pip install -r requirements.txt
 
-script: pytest
+script: pytest tebless/tests/
