@@ -1,3 +1,3 @@
 blessed
-events
+git+git://github.com/Akhail/events#egg=events
 pytest
