@@ -11,7 +11,6 @@ requires-python = >=3
 license = MIT
 install_requires =
     blessed
-    events
 dependency_links = git+https://github.com/Akhail/events.git
 classifiers =
     Development Status :: 3 - Alpha
